# InternBot

./: CONFIG.md  DEPLOYMENT.md  README.md  SETUP.md  config.env  docker-compose.dev.yml  docker-compose.yml  docker-compose.yml.save  setup.sh  test-build.sh
backend/: Dockerfile  pyproject.toml  test.py
backend/src/intern_bot/agent/: __init__.py  agent.py  agent_exapmple.py
backend/src/intern_bot/api/: __init__.py  api.py
backend/src/intern_bot/api/utils/: models.py  routes.py  scheduler.py
backend/src/intern_bot/data_manager/: __init__.py  data_manager.py
backend/src/intern_bot/data_scraper/: __init__.py  data_scraper.py
backend/src/intern_bot/data_scraper/scrapers/: __init__.py  nokia_scraper.py  pwr_scraper.py  sii_scraper.py
backend/src/intern_bot/settings/: __init__.py  settings.py
backend/src/intern_bot_core/data_scraper/: __init__.py
frontend/: Dockerfile  README.md  index.html  netlify.toml  nginx.conf  package.json  vercel.json  vite.config.ts
frontend/services/: chatService.ts
frontend/src/: App.css  App.tsx  vite-env.d.ts
frontend/src/components/: PasswordModal.tsx  Toast.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/services/: chatService.ts
frontend/src/views/: Chat.tsx
postgres/: schema.sql
scripts/: dev.sh
