
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intern_bot"
version = "0.0.1"
description = "Codebase for Intern Bot"
requires-python = ">=3.10"

dependencies = [
    "beautifulsoup4",
    "requests",
    "selenium",
    "langchain==0.3.9",
    "langchain-openai==0.2.10",  
    "langsmith",
    "pydantic",
    "pydantic-settings",
    "psycopg2-binary",
    "fastapi==0.112.2",
    "uvicorn",
    "langgraph",
    "celery[redis]",
    "apscheduler"
]

[project.optional-dependencies]
dev = ["ruff"]


[project.urls]
"Source" = "https://github.com/Micz26/InternBot"

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    # "UP",  # pyupgrade
]
line-length = 120
ignore = [
    # "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "W191", # indentation contains tabs
]
extend-exclude = [".venv/", "build/", "dist/", "docs/"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint.isort]
order-by-type = true
lines-between-types = 1
combine-as-imports = true
# known_first_party = "common"

[tool.setuptools.dynamic]
readme = {file = ['README.md']}